--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "gen:local": "npm run gen -- --localOnly",
     "gen:fallback": "npm run gen -- --fallback",
     "process-geo": "node ./src/maps/process.js",
-    "start": "npm run gen:fallback && cross-env NODE_ENV=development webpack serve --mode development --hot --devtool eval-cheap-module-source-map",
+    "start": "npm run gen:fallback && node --max-old-space-size=4192 node_modules/webpack-cli/bin/cli.js serve --mode development --hot --devtool eval-cheap-module-source-map",
     "prebuild": "npm run clean",
     "build": "npm run gen:fallback && cross-env NODE_ENV=production webpack --mode production",
     "watch": "cross-env NODE_ENV=development webpack --mode development -w",
@@ -42,10 +42,10 @@
     "prepack": "npm run build"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.14",
-    "@babel/preset-env": "^7.13.12",
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
     "@fortawesome/fontawesome-free": "^5.15.3",
-    "@octokit/request": "^5.4.14",
+    "@octokit/request": "^5.4.15",
     "@popperjs/core": "^2.9.2",
     "@testing-library/cypress": "^7.0.5",
     "@testing-library/jest-dom": "^5.11.10",
@@ -70,19 +70,19 @@
     "@types/lodash-es": "^4.17.4",
     "@types/node": "^14.14.37",
     "@types/regression": "^2.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.21.0",
-    "@typescript-eslint/parser": "^4.21.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "compute-logspace": "^1.0.0",
-    "concurrently": "^6.0.1",
+    "concurrently": "^6.0.2",
     "copy-webpack-plugin": "^8.1.1",
-    "core-js": "^3.10.0",
+    "core-js": "^3.10.1",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.2.0",
-    "css-minimizer-webpack-plugin": "^1.3.0",
-    "cypress": "^7.0.0",
+    "css-loader": "^5.2.1",
+    "css-minimizer-webpack-plugin": "^2.0.0",
+    "cypress": "^7.1.0",
     "cypress-image-snapshot": "^4.0.1",
     "d3-color": "^2.0.0",
     "d3-dsv": "^2.0.0",
@@ -90,10 +90,10 @@
     "d3-random": "^2.2.2",
     "d3-scale": "^3.2.4",
     "d3-scale-chromatic": "^2.0.0",
-    "d3-time": "^2.0.0",
+    "d3-time": "^2.1.1",
     "d3-time-format": "^3.0.0",
     "dirty-reprojectors": "0.0.2",
-    "eslint": "^7.23.0",
+    "eslint": "^7.24.0",
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-svelte3": "^3.1.2",
     "file-loader": "^6.2.0",
@@ -109,10 +109,10 @@
     "lint-staged": "^10.5.4",
     "lodash-es": "^4.17.21",
     "mapbox-gl": "^1.13.0",
-    "marked": "^2.0.1",
-    "mini-css-extract-plugin": "^1.4.0",
+    "marked": "^2.0.3",
+    "mini-css-extract-plugin": "^1.4.1",
     "node-fetch": "^2.6.1",
-    "nouislider": "^14.6.4",
+    "nouislider": "^14.7.0",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "raw-loader": "^4.0.2",
@@ -124,27 +124,27 @@
     "seedrandom": "^3.0.5",
     "style-loader": "^2.0.0",
     "svelte": "^3.37.0",
-    "svelte-check": "^1.3.0",
+    "svelte-check": "^1.4.0",
     "svelte-icons": "^2.1.0",
-    "svelte-jester": "^1.3.2",
-    "svelte-loader": "^3.1.0",
+    "svelte-jester": "^1.4.0",
+    "svelte-loader": "^3.1.1",
     "svelte-preprocess": "^4.7.0",
     "topojson-client": "^3.1.0",
     "topojson-server": "^3.0.1",
     "ts-jest": "^26.5.4",
     "ts-loader": "^8.1.0",
     "tslib": "^2.2.0",
-    "typescript": "^4.2.3",
+    "typescript": "^4.2.4",
     "url-loader": "^4.1.1",
     "vega": "^5.20.2",
     "vega-embed": "^6.17.0",
     "vega-lite": "^5.0.0",
-    "webpack": "^5.30.0",
+    "webpack": "^5.32.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "uikit": "^3.6.18"
+    "uikit": "^3.6.19"
   },
   "lint-staged": {
     "*.{ts,js,svelte}": "eslint --cache --fix",
