--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "@types/d3-time-format": "^3.0.0",
     "@types/jest": "^26.0.23",
     "@types/lodash-es": "^4.17.4",
+    "@types/lz-string": "^1.3.34",
+    "@types/marked": "^2.0.3",
     "@types/node": "^15.12.2",
     "@types/regression": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
@@ -108,6 +110,7 @@
     "js-yaml": "^4.1.0",
     "lint-staged": "^11.0.0",
     "lodash-es": "^4.17.21",
+    "lz-string": "^1.4.4",
     "mapbox-gl": "^1.13.0",
     "marked": "^2.0.7",
     "mini-css-extract-plugin": "^1.6.0",
@@ -140,9 +143,7 @@
     "vega-lite": "^5.1.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2",
-    "@types/lz-string": "^1.3.34",
-    "lz-string": "^1.4.4"
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "uikit": "^3.6.22"
