--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "lodash-es": "^4.17.21",
     "marked": "^4.0.4",
     "mini-css-extract-plugin": "^2.4.5",
-    "node-fetch": "^3.1.0",
+    "node-fetch": "^2.6.1",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.5.0",
     "raw-loader": "^4.0.2",
@@ -115,7 +115,7 @@
     "typescript": "^4.5.2",
     "url-loader": "^4.1.1",
     "vega": "^5.21.0",
-    "vega-embed": "^6.20.2",
+    "vega-embed": "6.20.0",
     "vega-lite": "^5.1.1",
     "webpack": "^5.64.2",
     "webpack-cli": "^4.9.1",
