--- a/.github/workflows/release_main.yml
+++ b/.github/workflows/release_main.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: 16
       - name: Extract version
         id: extract_version
         run: node -pe "'::set-output name=version::' + require('./package.json').version"
@@ -45,7 +45,7 @@ jobs:
         uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: 16
       - name: Cache Node.js modules
         uses: actions/cache@v2
         with:
@@ -76,7 +76,7 @@ jobs:
           ssh-key: ${{ secrets.CMU_DELPHI_DEPLOY_MACHINE_SSH }}
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: 16
       - name: Cache Node.js modules
         uses: actions/cache@v2
         with:
