--- a/.github/workflows/update_gdocs_data.yml
+++ b/.github/workflows/update_gdocs_data.yml
@@ -11,7 +11,7 @@ jobs:
           ssh-key: ${{ secrets.CMU_DELPHI_DEPLOY_MACHINE_SSH }}
       - uses: actions/setup-node@v2
         with:
-          node-version: '14.x'
+          node-version: 16
       - name: Cache Node.js modules
         uses: actions/cache@v2
         with:
