--- a/.github/workflows/release_main.yml
+++ b/.github/workflows/release_main.yml
@@ -113,17 +113,5 @@ jobs:
       - name: Reset dev branch
         run: |
           git fetch origin main:main
-          git reset --hard main
-      - name: Create pull request into dev
-        uses: peter-evans/create-pull-request@v3
-        with:
-          token: ${{ secrets.CMU_DELPHI_DEPLOY_MACHINE_PAT }}
-          branch: bot/sync-main-dev
-          commit-message: 'chore: sync main-dev'
-          base: dev
-          title: 'chore: sync main->dev'
-          labels: chore
-          reviewers: krivard
-          # assignees:
-          body: |
-            Syncing Main->Dev.
+          git merge main
+          git push
