--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -56,6 +56,7 @@ jobs:
           base: dev
           title: Sync to www-covidcast release ${{ steps.version.outputs.next_tag }}
           labels: chore
+          # reviewers:
           assignees: melange396
           body: |
             Syncing covidcast_utils files to www-covidcast release ${{ steps.version.outputs.next_tag }}.
