--- a/.github/workflows/update_gdocs_data.yml
+++ b/.github/workflows/update_gdocs_data.yml
@@ -29,6 +29,7 @@ jobs:
           commit-message: 'chore: update docs'
           title: Update Google Docs Meta Data
           labels: chore
+          # reviewers:
           assignees: melange396
           body: |
             Updating Google Docs Meta Data
